--- a/public/CSS/HomePage.css
+++ b/public/CSS/HomePage.css
@@ -12,11 +12,10 @@ background-size: cover;
 #header{
   width:100%;
   height:85px;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.2);
   box-shadow: 0px 3px 4 px gray;
 }
 #logo{
-  
   width:0.5px;
   height:85px;
   float:left;
@@ -41,11 +40,14 @@ li>a:hover{
   background: skyblue;
   color:#250;
 }
+
+#navbar{
+	margin-top: 120px;
+}
 #container ul{
   list-style:none;
   width:100%;
   height:80px;
-  margin-top: 120px;
 
 }
 #container ul li{
@@ -76,14 +78,8 @@ li>a:hover{
   background-color:rgba(0,0,0,0.8);
   margin-top: 400px;
   text-align: center;
+ 
+  left:20px;
+  bottom:0px;
+  font-size:40px;
 }
-Email>a{
-  display:block;
-  color:red;
-  line-height:80px;
-  text-align: center;
-  font-family: cursive;
-  font-size: 20px;
-  text-decoration: none;
-}
-
