--- a/public/CSS/RegisterForm.css
+++ b/public/CSS/RegisterForm.css
@@ -4,7 +4,7 @@
   padding: 0px
 }
 body{
-  background-image: url(marriage.jpg);
+  background-image: url(/Picture/marriage.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -47,6 +47,18 @@ li>a:hover{
   font-family: cursive;
   font-size: 30px;
   text-decoration: none;
+  
+}
+#footer{
+  width:100%;
+  height:80px;
+  background-color:rgba(0,0,0,0.8);
+  margin-top: 150px;
+  text-align: center;
+ 
+  left:20px;
+  bottom:0px;
+  font-size:40px;
 }
 
   
