--- a/public/CSS/view.css
+++ b/public/CSS/view.css
@@ -3,7 +3,7 @@
   padding: 0px
 }
 body{
-  background-image: url(/Picture/Login.jpg);
+  background-image: url(/Picture/viewPage.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -46,11 +46,11 @@ li>a:hover{
     height:260px;
     background-color: rgba(0,0,0,0.4);
     margin:0 auto;
-    margin-top: 100px;
+    margin-top: 200px;
     padding-top: 10px;
     padding-left: 100px;
     border-radius: 15px;
-    color:blue;
+    color:Black;
     font-weight: bolder;
     box-shadow: inset -4px -4px rgba(0,0,0,0.4);
     font-size: 18px;
@@ -68,8 +68,23 @@ li>a:hover{
     border:0;
     border-radius: 5px;
 }
+.pdetails{
+  width:300px;
+    height:600px;
+    background-color: rgba(0,0,0,0.4);
+    margin:0 auto;
+    margin-top: 50px;
+    padding-top: 10px;
+    padding-left: 100px;
+    border-radius: 15px;
+    color:Black;
+    font-weight: bolder;
+    box-shadow: inset -4px -4px rgba(0,0,0,0.4);
+    font-size: 18px;
+    display: none;
+}
 
-#footer{
+ #footer{
   width:100%;
   height:80px;
   background-color:rgba(0,0,0,0.8);
